main.css
/*UNIVERSAL*/

*{
  margin: 0;
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-weight:300;
  max-width: 100vw;
  
}

html,body {margin: 0; width: 100%; background-color:#12171d;/*oldcolorwas12161c*/}
html {height: 100%; }

body {
  min-height: 100%; /*FIX FOUND - this fixed the repeat img only showing for part of the page, as the body was only reaching the viewport's pixel height when body was set to height: 100%; solution was to keep html as that setting, but set body to min-height 100% instead of definitive height to 100%*/
  display: flex;
  flex-direction: column;
  overflow-x: hidden; /*prevent horizontal scroll bar*/
  /*star background*/
  background-image: url("/RoomToRoam/images/starV1frame1.png");
  background-repeat: repeat;
  background-attachment:fixed;
  /*TODO - play with these settings and consider animating the background img using method from STARTEST
  need to experiment with this more later (scrolling, animation with startest methods, full page coverage-FIX FOUND- min-height:100%; on body instead of height:100%;)*/
}

@media screen and (max-width: 850px){
  body {background-size: 50%;} /*fixes star density being too low on mobile*/
}

/*TOP*/

/*nav*/
/*nav-desktop*/
nav {
  z-index: 10;
  align-self: end;
  margin-right: 5%;
  position: fixed;
  
}
  nav button{
    display: none;
    visibility: hidden;
    position: absolute;
    height: 0px;
    width: 0px;
    margin: 0;
    padding: 0;
    border: 0;
    z-index: 30;
  }
    #topnav {
      z-index: 10;
      display: flex;
      align-items: center;
      margin: 0;
      gap: 1rem;              /*gap can be used for flex!!*/

      list-style-type: none;
      background-color: #12171d9d;
      padding: 1rem;
      border-radius: 1rem;
    }  
      .topnav-item{list-style-type: none;}
        .topnav-link{
          z-index: 12; 
          font-weight: 500;
          text-decoration: none;
        }
          .topnav-link:link, .topnav-link:active{
            color: #e3f5ff9d;
          }
          .topnav-link:visited{
            color: #e3f5ff9d;
          }
          .topnav-link:hover{/*TODO-style hover - possible animation*/
            color: #e3f5ff3f;
          }
   /*nav-mobile*/
  /*CONSIDER CHANGING THIS MEDIA QUERY METHOD - see https://stackoverflow.com/questions/6370690/media-queries-how-to-target-desktop-tablet-and-mobile*/
  @media screen and (max-width: 850px) and (prefers-reduced-motion){
    #topnav-menu{
      translate: 0 0;
      opacity: 0;
      transition: opacity 500ms ease-in-out; 
      transition: translate 0s;
  /*TODO - get this to work fully (test with Windows-start-easeofaccessdisplaysettings-showanimationsinwindows-off), and apply it to the jquery animations as well once working- currently only removes the close translation transition, but the open one still animates the same, and the opacity transition is nonexistent*/
    }
  }
  @media screen and (max-width: 850px){
    
  nav{width: 40px; height: 40px; margin:0; padding: 0; top: 3px; right: 3px;}

  .hamburger-icon {width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center;}
      .hamburger-icon-piece {
        width: 25px;
        height: 5%;
        background-color: white;
        border-radius: 1rem;
      }
  nav button{
    display: block;
    visibility: visible;
    position: absolute;
    background: none;
    height: 40px;
    width: 40px;
    margin: 0;
    padding: 0;
    border: 0;
    top: 0;
    right: 0;
  }
  #topnav-menu{
    width: 10rem; height: 14rem; margin: 0; position: fixed; top: 3px; right: 3px; /*fix: added measurements here instead of on nav element - this way the nav doesn't stay while only its content is translated*/
    z-index: 31;
    translate: 300vw 0;
    transition: translate 0.3s ease-in-out; 
  }
    #topnav {
      width: 100%;
      height: 100%;
      background-color: #12171df3;
      flex-direction: column;
      justify-content: space-evenly;
      font-size: large;
      align-items:flex-start; 
    }
  }
/*HAMBURGER MENU SOLUTION FOUND - SYNTAX ERROR ON BELOW (+ adjacent sibling combinator used instead of general sibling ~, and placed in wrong place*/
 
#topnav-open[aria-expanded="true"] ~ #topnav-menu {
  translate: 0; 
}

@media (prefers-reduced-motion){
  #topnav-open[aria-expanded="true"] ~ #topnav-menu {
    opacity: 1;
  }
}
/* #topnav-open[aria-expanded="true"] {
    + #topnav-menu{translate: 0;} the + here is necessary for this to be properly selected!!
  
    @media (prefers-reduced-motion){
      + #topnav-menu{opacity: 1;}
    }
  }   
*/


/*header*/
                              
header {
width: 95%; 
display: grid;
grid-template: 100%/100%;
height: 100svh;   /*fix for full screen logo at start*/
min-height: 500px; /*fix for overlap on small windows with above*/
}
    header>.logo {width: 100%; grid-area: 1/1/1/1; margin:0; padding:0;border:0;} /*use grid to overlap the imgs by forcing into the same grid space*/
    header>div {display: flex;justify-content: center; aspect-ratio: 1350/638;} /*aspect ratio set to match roots img so they stay the same size overlayed on eachother when the viewport changes*/
    #roots {z-index: 1;}
    #tree {
      flex:none; height: 70%; z-index: 2;
      transition: transform .5s ease-in-out;
      /*TODO: input a growth transition CSS animation here*/ 
    }
    #tree:hover {
      transform: scale(1.2) translateY(-5%); /*translate added to offset the growth of the tree to make sure the roots still look connected*/
    } 

            h1{position: relative; height: 1lh; top: 35%; left:3%; font-size: 9vw; color:#e3f5ff; z-index: 3;}

            @media screen and (max-width: 850px){
              header>.logo {height: 500px; margin-top: 20svh;}/*margin-top: 50px;*/
              #roots { display: none; visibility: hidden;}
              h1{top: 200px; font-size:53px;}
            }
/* ... */

